--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
 
 /* Angular material style import */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+/* @import "~@angular/material/prebuilt-themes/pink-bluegrey.css"; */
+/* @import "~@angular/material/prebuilt-themes/purple-green.css"; */
+/* @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"; */
+
+
+
+
+
+
